--- a/clicker.vcxproj
+++ b/clicker.vcxproj
@@ -102,6 +102,7 @@
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>..\..;..\..\backends;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -132,7 +133,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>..\..;..\..\backends;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
@@ -161,6 +162,9 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="source\clicker\clicker.hpp" />
+    <ClInclude Include="source\menu\fonts\fira.hpp" />
+    <ClInclude Include="source\menu\fonts\fonts.hpp" />
+    <ClInclude Include="source\menu\fonts\icons.hpp" />
     <ClInclude Include="source\hooks\hooks.hpp" />
     <ClInclude Include="source\menu\init.hpp" />
     <ClInclude Include="source\includes.hpp" />
